@@ -20,6 +20,17 @@
  */
 
 
+/* This demo program is called "strange button" since the important
+   button used here doesn't really look like one. The program is
+   meant to demonstrate how one could use the ability to determine
+   on which character of the label of an object  the mouse is on can
+   be used. Within the callback for the object this functionality is
+   used to modify the label in a useful way. (Mis-) Using a button
+   is necessary since a kind of object is needed that receives events
+   and thus can have callbacks (in principle also a box or frame might
+   do but they are static objects and thus can't have callbacks). */
+
+
 #ifdef HAVE_CONFIG_H
 #include <config.h>
 #endif
@@ -45,19 +56,23 @@ ccb( FL_OBJECT * ob,
 	 long        data  FL_UNUSED_ARG )
 {
 	unsigned int button = fl_mouse_button( );
-	int x = fl_get_label_char_at_mouse( ob );
+	int idx = fl_get_label_char_at_mouse( ob );
 	char digit;
 	const char * label = fl_get_object_label( ob );
 	char * str;
 
-	if (    x == -1
-		 || ! (    button == FL_LEFT_MOUSE
-				|| button == FL_RIGHT_MOUSE
-				|| button == FL_SCROLLUP_MOUSE
-				|| button == FL_SCROLLDOWN_MOUSE ) )
+	/* If the mouse isn't over one of the digits return */
+
+	if ( idx == -1 )
 		return;
 
-	digit = label[ x ];
+	/* Get the digit it's on */
+
+	digit = label[ idx ];
+
+	/* Left button or sroll up increment the value of the digit (with wrap
+	   around if we would get beyond '9') and right button and scroll down
+	   reduce its value (again with wrap around if it would drop below '1') */
 
 	if ( button == FL_LEFT_MOUSE || button == FL_SCROLLUP_MOUSE )
 	{
@@ -74,8 +89,13 @@ ccb( FL_OBJECT * ob,
 			--digit;
 	}
 
+	/* Make a copy of the label and replace the digit we want to change */
+
 	str = fl_strdup( label );
-	str[ x ] = digit;
+	str[ idx ] = digit;
+
+	/* Set this as the new label and get rid of the memory we allocated */
+
 	fl_set_object_label( ob, str );
 	fl_free( str );
 }
@@ -93,23 +113,32 @@ create_form_x( void )
     fdui->vdata = fdui->cdata = NULL;
     fdui->ldata = 0;
 
-    fdui->x = fl_bgn_form( FL_NO_BOX, 170, 176 );
-
-    obj = fl_add_box( FL_FLAT_BOX, 0, 0, 170, 176, "" );
+    fdui->x = fl_bgn_form( FL_FLAT_BOX, 170, 175 );
 
     obj = fl_add_text( FL_NORMAL_TEXT, 20, 10, 150, 50,
-					   "Click on the digits\n(left or right button)" );
+					   "Click on the digits...\n(left or right button)" );
     fl_set_object_lsize( obj, FL_NORMAL_SIZE );
 
-    fdui->c = obj = fl_add_button( FL_NORMAL_BUTTON, 40, 65, 90, 40, "012345" );
+	/* Create a button that rather looks like an embossed box (but boxes
+	   don't get events, so we need some object like a button that does. */
+
+    fdui->c = obj = fl_add_button( FL_TOUCH_BUTTON, 25, 65, 120, 40, "012345" );
     fl_set_object_boxtype( obj, FL_EMBOSSED_BOX );
     fl_set_object_color( obj, FL_YELLOW, FL_YELLOW );
+	fl_set_object_lstyle( obj, FL_FIXED_STYLE | FL_EMBOSSED_STYLE );
     fl_set_object_lsize( obj, FL_LARGE_SIZE );
     fl_set_object_callback( obj, ccb, 0 );
+	fl_set_button_mouse_buttons( obj, 1 | 4 | 8 | 16 );
+	fl_set_object_helper( obj, "May not look like a button but it's one...\n"
+						  "(Also try the scroll wheel if you have.)" );
 
-    obj = fl_add_button( FL_NORMAL_BUTTON, 50, 130, 70, 30, "Exit" );
+    obj = fl_add_button( FL_RETURN_BUTTON, 50, 130, 70, 30, "Exit" );
 
     fl_end_form( );
+
+	/* Just to make sure the label fits completely into the box */
+
+	fl_adjust_form_size( fdui->x );
 
     fdui->x->fdui = fdui;
 
