@@ -2,7 +2,7 @@
 
 @setfilename xforms.info
 @settitle XForms (Forms Library)@*A Graphical User Interface Toolkit for X@*Version 1.2
-@set lastupdate March 24, 2012
+@set lastupdate March 25, 2012
 @paragraphindent 0
 
 @titlepage
